[gd_scene load_steps=12 format=3 uid="uid://c65b2rbxswdam"]

[ext_resource type="Script" uid="uid://87w3ni3sy4xf" path="res://content/player/player_hud.gd" id="1_ebjuq"]
[ext_resource type="Theme" uid="uid://c55ad4h1x0cgs" path="res://content/ui/main_theme.tres" id="2_b3hcm"]
[ext_resource type="PackedScene" uid="uid://bkqtlp6ieg24c" path="res://content/ui/money_indicator.tscn" id="4_buk7q"]
[ext_resource type="PackedScene" uid="uid://d3b584cvukmyb" path="res://content/ui/time_indicator.tscn" id="4_caiy7"]
[ext_resource type="PackedScene" uid="uid://cump5np5pp7g3" path="res://content/ui/items_indicator.tscn" id="4_m1xjk"]
[ext_resource type="PackedScene" uid="uid://clbrlgyqed40b" path="res://content/ui/tools_indicator.tscn" id="5_m1xjk"]
[ext_resource type="PackedScene" uid="uid://bmcmo6g1y21dd" path="res://content/ui/rent_indicator.tscn" id="5_qro0s"]
[ext_resource type="PackedScene" uid="uid://do0wo04y6tf6h" path="res://content/player/stamina_indicator.tscn" id="6_7xuoy"]
[ext_resource type="Texture2D" uid="uid://do2sktlwkfj42" path="res://assets/kenney_input-prompts-pixel-16/Tilemap/tilemap_packed.png" id="9_ecb7i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p7sj8"]
atlas = ExtResource("9_ecb7i")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecb7i"]
atlas = ExtResource("9_ecb7i")
region = Rect2(336, 176, 16, 16)

[node name="PlayerHUD" type="Control" node_paths=PackedStringArray("action_state_label", "facing_dir_label", "time_label", "tool_label", "focus_cell_label", "can_use_label", "custom_label", "interact_notifier", "tools_indicator", "stamina_indicator")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_b3hcm")
script = ExtResource("1_ebjuq")
action_state_label = NodePath("VBoxContainer/ActionStateLabel")
facing_dir_label = NodePath("VBoxContainer/FacingDirLabel")
time_label = NodePath("VBoxContainer/TimeLabel")
tool_label = NodePath("VBoxContainer/ToolLabel")
focus_cell_label = NodePath("VBoxContainer/FocusCellLabel")
can_use_label = NodePath("VBoxContainer/CanUseLabel")
custom_label = NodePath("VBoxContainer/CustomLabel")
interact_notifier = NodePath("InteractPanel")
tools_indicator = NodePath("ToolsIndicator")
stamina_indicator = NodePath("StaminaIndicator")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 543.0
offset_top = 335.0
offset_right = 703.0
offset_bottom = 527.0

[node name="ActionStateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Action State"

[node name="FacingDirLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Facing Direction"

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time"

[node name="ToolLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tool"

[node name="CanUseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Can Use"

[node name="FocusCellLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "FocusCellLabel"

[node name="CustomLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "CustomLabels"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_top = -2.0
offset_bottom = 110.0
grow_horizontal = 0

[node name="TimeIndicator" parent="VBoxContainer2" instance=ExtResource("4_caiy7")]
layout_mode = 2

[node name="MoneyIndicator" parent="VBoxContainer2" instance=ExtResource("4_buk7q")]
layout_mode = 2

[node name="RentIndicator" parent="VBoxContainer2" instance=ExtResource("5_qro0s")]
layout_mode = 2

[node name="ItemsIndicator" parent="." instance=ExtResource("4_m1xjk")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 60.0
offset_bottom = 48.0
grow_horizontal = 1
grow_vertical = 1

[node name="ToolsIndicator" parent="." instance=ExtResource("5_m1xjk")]
layout_mode = 1
offset_left = -50.0
offset_top = -48.0
offset_right = 50.0

[node name="StaminaIndicator" parent="." instance=ExtResource("6_7xuoy")]
layout_mode = 1

[node name="InteractPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -170.0
offset_right = 82.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="InteractPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="InteractPanel/HBoxContainer"]
layout_mode = 2
text = "Interact:"

[node name="TextureRect2" type="TextureRect" parent="InteractPanel/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_p7sj8")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="InteractPanel/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_ecb7i")
expand_mode = 2
